# granitekv

./: .gitignore  CMakeLists.txt  README.md
inc/: bitcask.h  crc32.h
src/: main.cpp
src/storage/: bitcask.cpp
src/utils/: crc32.cpp
tests/: test_bitcask.cpp
